# decs

./: .gitignore  .gitmodules  CMakeLists.txt
include/: types.h
src/: object.c
test/: main.c
